--- a/src/pages/home/header/burger-menu/burgerMenu.module.css
+++ b/src/pages/home/header/burger-menu/burgerMenu.module.css
@@ -7,10 +7,25 @@
   }
 }
 
+.nav-mobile.active ul {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  row-gap: 1.563rem;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
 .burgerMenu {
   width: 2.813rem;
   height: 1.5rem;
   position: relative;
+  z-index: 1;
 }
 
 .line {
@@ -19,7 +34,7 @@
   top: 50%;
   left: 0;
   transform: translate(0, -50%);
-  border: 0.1em solid #111111;
+  border: 2px solid #111111;
 }
 
 .burgerMenu::after,
@@ -29,7 +44,7 @@
   display: block;
   width: 100%;
   box-sizing: border-box;
-  border: 0.1em solid #111111;
+  border: 2px solid #111111;
 }
 
 .burgerMenu::before {
