--- a/src/pages/home/header/burger-menu/burgerMenu.scss
+++ b/src/pages/home/header/burger-menu/burgerMenu.scss
@@ -5,19 +5,24 @@
   }
 }
 
+.nav-mobile {
+  ul {
+    position: absolute;
+
+    top: 0;
+    left: 0;
+  }
+}
+
 .nav-mobile.active {
   ul {
     display: flex;
-    position: absolute;
 
     flex-direction: column;
     row-gap: 1.563rem;
 
     justify-content: center;
     align-items: center;
-
-    top: 0;
-    left: 0;
 
     width: 100%;
     height: 100%;
@@ -43,6 +48,15 @@
 
   transform: translate(0, -50%);
   border: 2px solid #111111;
+
+  opacity: 1;
+  transition: opacity 0.1s;
+}
+
+.nav-mobile.active {
+  .line {
+    opacity: 0;
+  }
 }
 
 .burgerMenu::after,
@@ -60,9 +74,26 @@
 .burgerMenu::before {
   top: 0;
   left: 0;
+
+  transition: transform 0.1s;
+}
+.nav-mobile.active {
+  .burgerMenu::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0, -50%);
+  }
 }
 
 .burgerMenu::after {
   bottom: 0;
   left: 0;
+
+  transition: transform 0.1s;
+}
+
+.nav-mobile.active {
+  .burgerMenu::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0, 50%);
+  }
 }
