added media queries for RWD

--- a/src/pages/home/header/header.module.css
+++ b/src/pages/home/header/header.module.css
@@ -11,5 +11,10 @@
   line-height: 1.22;
   color: #111111;
 }
+@media (max-width: 1200px) {
+  .devName {
+    font-size: 1.5rem;
+  }
+}
 
 /*# sourceMappingURL=header.module.css.map */
