--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -6,6 +6,11 @@
   font-size: 1.5rem;
   line-height: 1.209;
 }
+@media (max-width: 1200px) {
+  .button {
+    font-size: 1.3rem;
+  }
+}
 
 .whiteBtn {
   border: 1px solid #111111;
