--- a/src/pages/home/header/navigation/navigation.scss
+++ b/src/pages/home/header/navigation/navigation.scss
@@ -4,6 +4,10 @@
 
   column-gap: 63px;
 
+  @media (max-width: 1024px) {
+    column-gap: 31.5px;
+  }
+
   @media (max-width: 768px) {
     display: none;
   }
@@ -15,4 +19,8 @@
 
   text-decoration: none;
   color: #000000;
+
+  @media (max-width: 1200px) {
+    font-size: 1.3rem;
+  }
 }
