--- a/src/pages/home/projects/projects.scss
+++ b/src/pages/home/projects/projects.scss
@@ -29,15 +29,21 @@
 }
 
 .filterPanelContainer {
+  display: flex;
+  justify-content: center;
+
   margin-bottom: 6rem;
 }
 
 .filterPanel {
   display: flex;
+  max-width: 28.125rem;
+
+  flex-wrap: wrap;
   justify-content: center;
 
   column-gap: 1.3rem;
-
+  row-gap: 0.9rem;
   li {
     cursor: pointer;
     padding: 0.25em;
