--- a/src/pages/home/contacts/contacts.module.css
+++ b/src/pages/home/contacts/contacts.module.css
@@ -1,3 +1,27 @@
+.contacts {
+  padding: 1.563rem 0;
+  position: relative;
+}
 
+.article-header {
+  margin-bottom: 2.813rem;
+}
+
+.title {
+  padding: 0.625rem;
+  line-height: 1.22;
+  text-align: center;
+  color: #111111;
+}
+
+.title::after {
+  content: "";
+  position: absolute;
+  top: 2.75em;
+  left: 50%;
+  width: 7.306em;
+  border: 1px solid #5e5e5e;
+  transform: translate(-50%, 0);
+}
 
 /*# sourceMappingURL=contacts.module.css.map */
