--- a/src/pages/home/contacts/contact-form/contactForm.scss
+++ b/src/pages/home/contacts/contact-form/contactForm.scss
@@ -15,7 +15,11 @@
   > button {
     align-self: start;
     justify-self: end;
+
+    grid-row: 3;
     grid-column: 2;
+
+    z-index: 1;
   }
 }
 
@@ -58,4 +62,37 @@
 .message-field::placeholder {
   @include common.text-font($alignment: left);
   color: #5e5e5e;
+}
+
+.requset-status {
+  grid-row: 3;
+  grid-column: 1 / -1;
+
+  text-align: center;
+  align-self: center;
+}
+
+.loader {
+  width: 50px;
+
+  align-self: center;
+  justify-self: center;
+
+  grid-row: 3;
+  grid-column: 2;
+  aspect-ratio: 1;
+
+  border-radius: 50%;
+  background: radial-gradient(farthest-side, #ffa516 94%, #0000) top/8px 8px
+      no-repeat,
+    conic-gradient(#0000 30%, #ffa516);
+
+  mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: l13 1s infinite linear;
+}
+
+@keyframes l13 {
+  100% {
+    transform: rotate(1turn);
+  }
 }
