--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -3,7 +3,7 @@
   text-decoration: none;
 
   text-align: center;
-  padding: 0.417em 2.313em;
+  padding: 0.417em 2.313em; // it is em 'cause padding is defined as width and height
 
   font-size: 1.5rem;
   line-height: 1.209;
