size unit 'em' of margin and padding to 'rem' size unit

--- a/src/components/filter-panel/filterPanel.scss
+++ b/src/components/filter-panel/filterPanel.scss
@@ -16,7 +16,7 @@
   row-gap: 0.9rem;
   li {
     cursor: pointer;
-    padding: 0.25em;
+    padding: 0.313rem;
     border-radius: 50px;
 
     transition: box-shadow 0.5s;
