--- a/src/pages/home/header/header.module.css
+++ b/src/pages/home/header/header.module.css
@@ -3,7 +3,7 @@
   padding: 2.25rem 2rem;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 1.563rem;
 }
 
 .devName {
