--- a/src/components/filter-panel/filterPanel.module.css
+++ b/src/components/filter-panel/filterPanel.module.css
@@ -14,7 +14,7 @@
 }
 .filterPanel li {
   cursor: pointer;
-  padding: 0.25em;
+  padding: 0.313rem;
   border-radius: 50px;
   transition: box-shadow 0.5s;
 }
