--- a/src/pages/home/header/burger-menu/burgerMenu.module.css
+++ b/src/pages/home/header/burger-menu/burgerMenu.module.css
@@ -1,20 +1,20 @@
 .nav-mobile {
   display: none;
 }
+.nav-mobile ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 @media (max-width: 768px) {
   .nav-mobile {
     display: block;
   }
 }
 
-.nav-mobile ul {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .nav-mobile.active ul {
   display: flex;
+  touch-action: none;
   flex-direction: column;
   row-gap: 1.563rem;
   justify-content: center;
@@ -22,13 +22,14 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
+  z-index: 1000;
 }
 
 .burgerMenu {
   width: 2.813rem;
   height: 1.5rem;
   position: relative;
-  z-index: 1;
+  z-index: 10001;
 }
 
 .line {
