--- a/src/components/filter-panel/filterPanel.scss
+++ b/src/components/filter-panel/filterPanel.scss
@@ -3,6 +3,10 @@
   justify-content: center;
 
   margin-bottom: 6rem;
+
+  @media (max-width: 48rem) {
+    margin-bottom: 4rem;
+  }
 }
 
 .filterPanel {
@@ -14,6 +18,12 @@
 
   column-gap: 1.3rem;
   row-gap: 0.9rem;
+
+  @media (max-width: 30rem) {
+    column-gap: 0.5rem;
+    row-gap: 0.5rem;
+  }
+
   li {
     cursor: pointer;
     padding: 0.313rem;
@@ -23,6 +33,8 @@
   }
 
   li:hover {
-    box-shadow: 0px 0.5em 0.85em 0px #ffdb00;
+    @media (min-width: 48.063rem) {
+      box-shadow: 0px 0.5em 0.85em 0px #ffdb00;
+    }
   }
 }
