--- a/src/pages/home/about-me/aboutMe.scss
+++ b/src/pages/home/about-me/aboutMe.scss
@@ -9,15 +9,35 @@
 
   padding: 4.844rem 0;
   margin-bottom: 1.563rem;
+
+  @media (max-width: 48rem) {
+    padding: 4rem 0;
+  }
+
+  @media (max-width: 30rem) {
+    margin-bottom: 0;
+  }
 }
 
 .article-header {
   margin-bottom: 2.844rem;
+
+  @media (max-width: 64rem) {
+    margin-bottom: 1.375rem;
+  }
 }
 
 .title {
   padding: 0.625rem 0;
   @include common.header-font;
+
+  @media (max-width: 64rem) {
+    font-size: 2.4rem;
+  }
+
+  @media (max-width: 48rem) {
+    font-size: 2rem;
+  }
 }
 
 .title::after {
@@ -52,7 +72,7 @@
   flex-wrap: wrap;
 
   li {
-    font-size: 0.75rem;
+    font-size: 1rem;
     line-height: 1.25;
     text-align: center;
     color: #000000;
