--- a/src/pages/home/contacts/contact-form/contactForm.module.css
+++ b/src/pages/home/contacts/contact-form/contactForm.module.css
@@ -1,8 +1,15 @@
 .contact-form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  padding: 0 0.625rem;
   grid-auto-rows: 4.688rem;
   gap: 0.938rem 4.438rem;
+}
+@media (max-width: 48rem) {
+  .contact-form {
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 1.563rem;
+  }
 }
 .contact-form p {
   display: flex;
@@ -14,6 +21,13 @@
   grid-row: 3;
   grid-column: 2;
   z-index: 1;
+}
+@media (max-width: 48rem) {
+  .contact-form > button {
+    grid-column: 1;
+    grid-row: 5;
+    justify-self: stretch;
+  }
 }
 
 .user-name > label,
@@ -29,6 +43,12 @@
 
 .user-message {
   grid-row: span 2;
+}
+@media (max-width: 48rem) {
+  .user-message {
+    grid-column: 1;
+    grid-row: 3/span 2;
+  }
 }
 
 .name-field,
@@ -65,6 +85,13 @@
   text-align: center;
   align-self: center;
 }
+@media (max-width: 48rem) {
+  .requset-status {
+    align-self: start;
+    grid-column: 1;
+    grid-row: 5;
+  }
+}
 
 .loader {
   width: 50px;
@@ -77,6 +104,13 @@
   background: radial-gradient(farthest-side, #ffa516 94%, rgba(0, 0, 0, 0)) top/8px 8px no-repeat, conic-gradient(rgba(0, 0, 0, 0) 30%, #ffa516);
   mask: radial-gradient(farthest-side, rgba(0, 0, 0, 0) calc(100% - 8px), #000 0);
   animation: l13 1s infinite linear;
+}
+@media (max-width: 48rem) {
+  .loader {
+    align-self: start;
+    grid-column: 1;
+    grid-row: 5;
+  }
 }
 
 @keyframes l13 {
