--- a/src/pages/home/contacts/contacts.scss
+++ b/src/pages/home/contacts/contacts.scss
@@ -1,8 +1,14 @@
 @use "../../../common-styles/common.scss";
 
 .contacts {
-  padding: 1.563rem 0;
+  padding-top: 1.563rem;
+  margin-bottom: 2rem;
+
   position: relative;
+
+  @media (max-width: 48rem) {
+    margin-bottom: 0;
+  }
 }
 
 .article-header {
@@ -12,6 +18,14 @@
 .title {
   padding: 0.625rem;
   @include common.header-font;
+
+  @media (max-width: 64rem) {
+    font-size: 2.4rem;
+  }
+
+  @media (max-width: 48rem) {
+    font-size: 2rem;
+  }
 }
 
 .title::after {
