--- a/src/pages/home/header/header.scss
+++ b/src/pages/home/header/header.scss
@@ -6,6 +6,18 @@
   align-items: center;
 
   margin-bottom: 1.563rem;
+
+  @media (max-width: 75.25rem) {
+    padding: 1.5rem 1.5rem;
+  }
+
+  // @media (max-width: 48rem) {
+  //   margin-bottom: 0;
+  // }
+
+  @media (max-width: 30rem) {
+    padding: 1rem 1rem;
+  }
 }
 
 .devName {
@@ -15,7 +27,7 @@
   line-height: 1.22;
   color: #111111;
 
-  @media (max-width: 1200px) {
+  @media (max-width: 75rem) {
     font-size: 1.5rem;
   }
 }
