--- a/src/pages/home/hero/hero.module.css
+++ b/src/pages/home/hero/hero.module.css
@@ -6,9 +6,19 @@
   padding: 1.563rem 0;
   margin-bottom: 1.563rem;
 }
+@media (max-width: 48rem) {
+  .hero {
+    margin-bottom: 0;
+  }
+}
 
 .article-header {
   margin-bottom: 4.375rem;
+}
+@media (max-width: 64rem) {
+  .article-header {
+    margin-bottom: 2.375rem;
+  }
 }
 
 .title {
@@ -16,6 +26,16 @@
   line-height: 1.21;
   text-align: center;
   color: #111111;
+}
+@media (max-width: 64rem) {
+  .title {
+    font-size: 2.4rem;
+  }
+}
+@media (max-width: 48rem) {
+  .title {
+    font-size: 2rem;
+  }
 }
 
 .title::after {
@@ -29,7 +49,7 @@
 }
 
 .about-me {
-  padding: 0.625rem 0;
+  padding: 0.625rem 0.625rem;
   margin-bottom: 1.563rem;
   text-align: center;
   font-size: 1.125rem;
@@ -41,6 +61,13 @@
   display: flex;
   flex-flow: row wrap;
   gap: 61px;
+}
+@media (max-width: 30rem) {
+  .nav-buttons {
+    flex-direction: column;
+    justify-content: center;
+    gap: 35px;
+  }
 }
 
 /*# sourceMappingURL=hero.module.css.map */
