--- a/src/components/filter-panel/filterPanel.module.css
+++ b/src/components/filter-panel/filterPanel.module.css
@@ -29,8 +29,10 @@
   border-radius: 50px;
   transition: box-shadow 0.5s;
 }
-.filterPanel li:hover {
-  box-shadow: 0px 0.5em 0.85em 0px #ffdb00;
+@media (min-width: 48.063rem) {
+  .filterPanel li:hover {
+    box-shadow: 0px 0.5em 0.85em 0px #ffdb00;
+  }
 }
 
 /*# sourceMappingURL=filterPanel.module.css.map */
